# llvm-mos-sdk

mos-platform/: CMakeLists.txt
mos-platform/bare6502/: CMakeLists.txt  clang.cfg  link.ld
mos-platform/bare6502/crt0/: reset.S  serial.S
